--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,14 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: myFirstFont;
+  src: url('https://www.bedbathandbeyond.com/static/assets/fonts/Montserrat-Medium.woff2');
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+@font-face {
+  font-family: myFirstFont2;
+  src: url('https://www.bedbathandbeyond.com/static/assets/fonts/TiemposHeadline-Semibold.woff2');
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.menu-text {
+  font-weight: bold;
+  font-size: 2rem;
 }
